--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl                 = "/"               # Your domain name. Must end with "/"
+baseurl                 = "https://turbohustle.xyz/"               # Your domain name. Must end with "/"
 languageCode            = "en-us"
 title                   = "Turbo Hustle"
 theme                   = "hugo-theme-sam"
