--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # baseurl = "https://wonderful-tesla-da4783.netlify.com/"
-baseurl = "http://localhost:1313/"
+baseurl = "https://turbohustle.xyz/"
 languageCode = "en-us"
 title = "Turbohustle"
 preserveTaxonomyNames = true
