--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en-us"
 title = "Turbo Hustle"
 preserveTaxonomyNames = true
 paginate = 3
-disqusShortname = "shortname"
+disqusShortname = "turbohustle-xyz"
 googleAnalytics = "UA-111593067-2"
 pluralizeListTitles = false
 # Set the followings to true as part of your site SEO
