Updated the mini about
Signed-off-by: Naveen Honest Raj <naveen@skcript.com>

--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ canonifyURLs = true
 
   paragraph = "Emphasizing the art of motor sports in the way it deserves. Boost your horses to experience the lap of honor"
 
-  about     = "Coming soon."
+  about     = "A Engineering graduate with a soft spot for Motor sports marking the beginning of expressing himself in the form of Weblog. Since Motorsports turns out to be a epitome of art its mandatory to honor it. Hope this turns out to be mutually beneficial."
 
   # This appears at the top of the sidebar above params.intro.header.
   # A width of less than 100px is recommended from a design perspective.
