--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ canonifyURLs = true
   # Sets Categories to sort by number of posts instead of alphabetical
   categoriesByCount    = true
   # set to show or to hide categories in the sidebar
-  showSidebarCategories = true
+  showSidebarCategories = false
   # Sets Estimated Reading Time to appear in post headers
   includeReadingTime   = true
   # Sets the Favicon and Version for the site. Default support is for
@@ -89,7 +89,7 @@ canonifyURLs = true
 [params.intro]
   header    = "Turbo Hustle"
 
-  paragraph = "Emphasizing the art of motor sports in the way it deserves. Boost your horses to experience the lap of honor"
+  paragraph = "Break through the obscure performance of your engine by adapting these vital upgrades."
 
   about     = "An Engineer, with a soft spot ♥️ for Motor sports marking the beginning of expressing himself. Since Motorsports turns out to be an epitome of art its mandatory to honor it."
 
