--- a/config.toml
+++ b/config.toml
@@ -89,7 +89,7 @@ canonifyURLs = true
 [params.intro]
   header    = "Turbo Hustle"
 
-  paragraph = "Break through the obscure performance of your engine by adapting these vital upgrades."
+  paragraph = "Emphasizing the art of motor sports in the way it deserves. Boost your horses to experience the lap of honor"
 
   about     = "An Engineer, with a soft spot ♥️ for Motor sports marking the beginning of expressing himself. Since Motorsports turns out to be an epitome of art its mandatory to honor it."
 
