--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://turbohustle.xyz/"
+baseURL = "https://turbohustle.com/"
 canonifyURLs = true
 disqusShortname = "turbohustle-xyz"
 enableRobotsTXT = true
