--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ languageCode = "en-us"
 paginate = 3
 pluralizeListTitles = false
 preserveTaxonomyNames = true
-title = "Turbo Hustle"
+title = "Turbo Hustle - Emphasizing the art of motor sports"
 [author]
 name = "Sanjiv Raj"
 [[menu.main]]
